--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:allowBackup="true"
         android:icon="@drawable/icon_main"
         android:label="@string/app_name"
-        android:name=".application.BluetoothApplication"
+        android:name=".application.FileTransferApplication"
         android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
