--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,8 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry kind="lib" path="C:/Users/Wise/git/FileTransfer/libs/activation.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Wise/git/FileTransfer/libs/additionnal.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Wise/git/FileTransfer/libs/mail.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
